namespaces/live.cloud-platform.service.justice.gov.uk/track-my-case-automation/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "track-my-case-automation"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
    component: track-my-case-dev
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "track-my-case"
    cloud-platform.justice.gov.uk/application: "Track My Case"
    cloud-platform.justice.gov.uk/owner: "Service Transformation Team: stgtransformationteam@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/track-my-case"
    cloud-platform.justice.gov.uk/team-name: "stg-victims-pathfinder"
    cloud-platform.justice.gov.uk/review-after: ""
